<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

  <com.santalu.textmatcher.widget.MatcherTextView
      android:id="@+id/mentionText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/no_mention"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.santalu.textmatcher.widget.MatcherTextView
      android:id="@+id/hashtagText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/no_hashtag"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mentionText" />

  <com.santalu.textmatcher.widget.MatcherEditText
      android:id="@+id/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:hint="@string/hint_match"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/hashtagText" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/showAllButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/action_show_all"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>