<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

  <com.google.android.material.button.MaterialButton
      android:id="@+id/singleRuleButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_single_rule"
      app:layout_constraintBottom_toTopOf="@+id/multiRuleButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/multiRuleButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_multi_rule"
      app:layout_constraintBottom_toTopOf="@+id/customRuleButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/singleRuleButton" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/customRuleButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_custom_rule"
      app:layout_constraintBottom_toTopOf="@+id/simpleTextButton"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/multiRuleButton" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/simpleTextButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title_simple_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/customRuleButton" />

</androidx.constraintlayout.widget.ConstraintLayout>